# de-execution-framework

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  data_platform_design_doc.md  data_platform_phase2_spec.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
de_platform/: __main__.py
de_platform/cli/: migrate.py  runner.py
de_platform/config/: container.py  context.py  env_loader.py
de_platform/implementations/: memory_logger.py  pretty_logger.py
de_platform/interfaces/: logging.py
de_platform/migrations/: runner.py
de_platform/modules/: base.py
de_platform/pipeline/: algorithms.py  audit_accumulator.py  auth_middleware.py  client_config_cache.py  currency.py  dedup.py  dto.py  enrichment.py  events.py  query_framework.py  serialization.py  task_arg_generators.py  topics.py  validation.py  window_engine.py
de_platform/services/: registry.py
de_platform/shared/: data_stream.py
deploy/terraform/: main.tf  outputs.tf  variables.tf
deploy/terraform-k8s/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
docs/: algos_rework.md  bugs.md  changes.md  e2e-test-streamline-plan.md  e2e-test-summary.md  implementation-plan.md  notes.md  phase10.md  phase11.md  phase12.md  phase13.md  phase14.md  phase15.md  phase16.md  test-strategy.md
docs/plans/: phase1-bug-fixes-observability.md  phase2-algorithm-unit-tests.md  phase3-data-model-evolution.md  phase4-client-config-batch-enhancements.md  phase5-data-audit-redesign.md  phase6-test-infrastructure.md  phase7-ui-improvements.md  phase8-scaling-performance.md
grafana/dashboards/: algos.json  data_api.json  normalizer.json  persistence.json  pipeline_overview.json  test_live.json  test_runs.json
prometheus/: prometheus.yml
scripts/: clickhouse_init.sql  dev-docker.sh  dev-k8s-tf.sh  dev-k8s.sh  dev-native.sh  dev.sh
tests/e2e/: conftest.py  test_alert_cases.py  test_algo_pipeline.py  test_auth.py  test_client_config.py  test_containers.py  test_data_audit.py  test_data_pipeline.py  test_inprocess_e2e.py  test_inprocess_real_infra.py  test_matrix_real_infra.py  test_memory.py  test_pipeline.py  test_subprocess.py  test_subprocess_e2e.py  test_task_scheduler.py
tests/e2e_k8s/: conftest.py  test_alert_cases.py  test_algo_pipeline.py  test_auth.py  test_client_config.py  test_data_audit.py  test_data_pipeline.py  test_task_scheduler.py
tests/e2e_ui/: conftest.py  (+8 more)
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+285 files in other folders)
