[project]
name = "data-platform"
version = "0.1.0"
description = "Data Platform Execution Framework"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.29.0",
    "redis>=5.0",
    "confluent-kafka>=2.3",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres,redis,kafka]>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["de_platform*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
