[project]
name = "data-platform"
version = "0.1.0"
description = "Data Platform Execution Framework"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "prometheus-client>=0.20",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
infra = [
    "asyncpg>=0.29.0",
    "redis>=5.0",
    "confluent-kafka>=2.3",
    "minio>=7.0",
    "clickhouse-connect>=0.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.5",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["de_platform*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring real infrastructure services (Postgres, ClickHouse, Redis, Kafka, MinIO)",
    "e2e: full pipeline end-to-end tests with all services and module subprocesses",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
